--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "autoCreateAccount": true,
-  "buildLabel": "2024.04.05.09.57/uqu6l4zCW+JtySlPa-9hHg",
+  "BuildLabel":"2024.04.29.11.14/6-CUNeown8rsdp9YcTYjVg",
   "matchmakingBuildId": "7887592499483330302",
-  "version": "35.5.5",
+  "version": "35.5.9",
   "skipStoryModeChoice": true,
   "skipTutorial": true,
   "unlockAllMissions": true,
