--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/setup-node@v4.0.2
               with:
                   node-version: ${{ matrix.version }}
-            - run: npm i
+            - run: npm ci --force
             - run: cp config.json.example config.json
             - run: echo '{"version":"","buildLabel":"","matchmakingBuildId":""}' > static/data/buildConfig.json
             - run: npm run build
