--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,11 +1,11 @@
 # yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 language: "en-US"
-early_access: false
+early_access: true
 reviews:
     profile: "chill"
-    request_changes_workflow: false
-    changed_files_summary: false
-    high_level_summary: false
+    request_changes_workflow: true
+    changed_files_summary: true
+    high_level_summary: true
     poem: false
     review_status: true
     collapse_walkthrough: false
